--- a/styles/simulation.css
+++ b/styles/simulation.css
@@ -80,7 +80,7 @@
 }
 
 .sim-chartTitle {
-  margin: 0 0 0.3rem;
+  margin: 0;
   text-align: center;
   font-size: 1.3rem;
   font-weight: 700;
@@ -105,7 +105,7 @@
 .box-whisker-container {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: clamp(1rem, 3vh, 3rem);
 }
 
 .vra-impact-table-container {
